# escapist

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/: dependabot.yml
.github/workflows/: automerge.yml  lint.yml  tag_and_release.yml  test.yml
script/: generate_changelog
src/: lib.rs
src/escape/: href.rs  html.rs  mod.rs
src/unescape/: html.rs  mod.rs
tests/: unescape_html.rs
